--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
         </footer>
 
     </div>
+    <!-- this is a comment of the page  -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
   <script>
